# Utopify

./: .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  core.py  pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt
bot/: __main__.py
bot/cogs/: blank.py
bot/ext/: bot.py
bot/ext/utils/: logger.py
bot/exts/: bot.py
data/: cock.db  markov.db  warns.db
extensions/: dev.py  error_h.py  fun.py  help.py  mod.py
extensions/utils/: checks.py  context.py  database.py  image.py  markov.py  paginator.py
tests/: test_directory.py
